Added the link to the GitHub repository

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <footer>
       This project was coded by Beatriz Gordo and is
       <a
-        href="#"
+        href="https://github.com/beatrizpmgordo/WorldClock"
         target="_blank"
         >open sourced on GitHub</a
       >
