--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
     <title>World Clock Project</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Choose a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Beatriz Gordo and is
       <a
