Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -17,25 +17,30 @@
       <h1>World Clock</h1>
 
       <select>
-        <option value="">Choose a city...</option>
+        <option value="">Choose city</option>
         <option value="">London</option>
         <option value="">New York</option>
         <option value="">Auckland</option>
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
+
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Sidney</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Beatriz Gordo and is
+      This project was coded by <strong>Beatriz Gordo</strong> and is
       <a
         href="https://github.com/beatrizpmgordo/WorldClock"
         target="_blank"
