--- a/index.html
+++ b/index.html
@@ -10,33 +10,41 @@
       rel="stylesheet"
       href="css/style.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Project</title>
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>World Clock 🌍</h1>
 
       <select>
         <option value="">Choose city</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="">London 🇬🇧</option>
+        <option value="">New York 🇺🇸</option>
+        <option value="">Auckland 🇳🇿</option>
       </select>
 
-      <div class="city">
+      <div
+        class="city"
+        id="los-angeles"
+      >
         <div>
-          <h2>Los Angeles</h2>
-          <div class="date">August 15th 2022</div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:15 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div
+        class="city"
+        id="paris"
+      >
         <div>
-          <h2>Sidney</h2>
-          <div class="date">August 15th 2022</div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:15 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
