--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       <select id="city">
         <option value="">Choose a city</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London 🇬🇧</option>
         <option value="America/New_York">New York 🇺🇸</option>
         <option value="Pacific/Auckland">Auckland 🇳🇿</option>
